--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Willinggo Games - Global Hyper-Casual Game Publisher</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="logo">Willinggo Games</div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#games">Games</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section id="home" class="hero">
+        <h1>Creating World-Class Hyper-Casual Gaming Experiences</h1>
+        <p>Fun at Your Fingertips</p>
+    </section>
+
+    <section id="games" class="games">
+        <h2>Popular Games</h2>
+        <div class="game-grid">
+            <div class="game-card">
+                <a href="https://gold.minigame.vip" target="_blank">
+                    <div class="icon-container">
+                        <i class="fas fa-gamepad"></i>
+                    </div>
+                    <h3>Minigame Center</h3>
+                    <p>Play instant games without downloads</p>
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="https://pattonmonitor.com" target="_blank">
+                    <div class="icon-container">
+                        <i class="fas fa-puzzle-piece"></i>
+                    </div>
+                    <h3>Pattonmonitor Games</h3>
+                    <p>HTML5 gaming hub with diverse selections</p>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <h2>About Willinggo Games</h2>
+        <p>Willinggo Games is a global publisher specializing in hyper-casual games. We are dedicated to bringing simple, fun, and instantly playable gaming experiences to players worldwide.</p>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <div class="contact-info">
+            <p>Email: contactdonny729@gmail.com</p>
+            <p>Business Cooperation: contactdonny729@gmail.com</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Willinggo Games. All rights reserved.</p>
+    </footer>
+</body>
+</html> 
